# mqtt-project

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.svc.yml  docker-compose.yml
mqtt_producer_app/: pyproject.toml
mqtt_publisher_app/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
mqtt_publisher_app/mqtt_publisher_app/: __init__.py  publish.py
mqtt_reader_app/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
mqtt_reader_app/mqtt_reader_app/: app.py
mqtt_reader_app/tests/: test_app.py
mqtt_subscriber_app/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
mqtt_subscriber_app/mqtt_subscriber_app/: subscribe.py
mqtt_subscriber_app/tests/: test_subscribe.py
mqtt_subsriber_app/: pyproject.toml
mqtt_subsriber_app/mqtt_subsriber_app/: subscribe.py
