[tool.poetry]
name = "mqtt-reader-app"
version = "0.1.0"
description = ""
authors = ["Sheena <11192150+sheenacodes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
pymongo = "^4.6.1"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
uvicorn-fastapi = "mqtt_reader_app.app:main"
